make params more stable